--- a/skf-24136.html
+++ b/skf-24136.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=satoshi@700,500,400&amp;display=swap">
     <link rel="preload" href="https://skfproduct.in/style.css" as="style">
     <link rel="stylesheet" href="https://skfproduct.in/style.css">
-    <link rel="stylesheet" href="https://skfproduct.in/customer.css">
+    <style>
+        .text-blue-500{--tw-text-opacity: 1;color:#3769bf}.hover\:text-blue-700:hover{--tw-text-opacity:1;color:#0f58d6}
+    </style>
 
 </head>
 
